# Mist

./: .gitignore  .gitmodules  CMakeLists.txt  Mist.sln
Mist/: Mist.vcxproj  Mist.vcxproj.filters  cpp.hint
Mist/src/: common.hpp  interpreter.cpp  interpreter.hpp  main.cpp
Mist/src/backend/: bytecodegenerator.cpp  bytecodegenerator.hpp  codegen.cpp  codegen.hpp
Mist/src/frontend/checker/: scope.cpp  scope.hpp  typer.cpp  typer.hpp  value.cpp  value.hpp
Mist/src/frontend/checker/desurgar/: desurgur.cpp  desurgur.hpp
Mist/src/frontend/checker/types/: type.cpp  type.hpp
Mist/src/frontend/parser/: ast.cpp  ast.hpp  parser.cpp  parser.cpp.bak  parser.hpp  parser.hpp.bak  scanner.cpp  scanner.hpp  token.cpp  token.hpp
Mist/src/frontend/parser/ast/: ast.hpp  ast_common.cpp  ast_common.hpp  ast_decl.cpp  ast_decl.hpp  ast_expr.cpp  ast_expr.hpp  ast_pattern.cpp  ast_pattern.hpp  ast_printer.cpp  ast_printer.hpp  ast_typespec.cpp  ast_typespec.hpp
Mist/src/frontend/parser/tokenizer/: scanner.cpp  scanner.hpp  token.cpp  token.hpp
Mist/src/utils/: directory.cpp  directory.hpp  file.cpp  file.hpp  fileio.cpp  fileio.hpp
Mist/test/: parser.cpp
VM/: CMakeLists.txt  README.md  main.cpp  vm.cpp  vm.hpp
VM/src/: chunk.cpp  chunk.hpp  common.hpp  environment.hpp  instruction.cpp  instruction.hpp  object.cpp  object.hpp  opcode.cpp  opcode.hpp  value.cpp  value.hpp
examples/: haskell.hs  hello.mst  language.md  language.txt  redesign.md  redesign_syntax.mst  simple.mst  structs.mst  structs2.mst  structs3.mst  sum_prod.mst  t1.mst  test.mst
